--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,6 +6,8 @@
   color: white;
   padding: 40px 0 40px 50px;
   text-align: left;
+  width: 100%;
+  margin-top: auto; /* Trycker ner footern till botten */
 }
 
 .footer-section {
@@ -97,5 +99,8 @@
 }
 
 /* Max 1600px */
-@media (max-width: 1600px) {
+@media (min-width: 1600px) {
+  .footer {
+    grid-template-columns: repeat(5, 1fr); /* 5 kolumner */
+  }
 }
