--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,15 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/* Grundläggande reset */
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
@@ -20,10 +8,10 @@ body {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   grid-gap: 10px;
   width: 100%;
-  max-width: 800px;
+  max-width: 1600px;
 }
 
 /* Styla varje bild */
@@ -82,11 +70,11 @@ body {
 }
 
 .modal-image {
-  max-width: 90%;
-  max-height: 90%;
   border: 2px solid white;
   filter: grayscale(0%); /* Alltid färg i modal */
   transition: filter 0.3s ease; /* Smidig övergång */
+  width: 100%;
+  height: 100%;
 }
 
 .modal.active {
