--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,24 @@
   padding: 0;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: white;
+  flex-direction: column;
+  font-size: 16px;
+}
+
+section {
+  padding: 5% 10% 0 10%;
+}
+
+section:last-of-type {
+  padding-bottom: 5%;
+}
+
 h1 {
   font-size: 2rem;
   padding: 1.5rem 0 1rem 0;
@@ -47,23 +65,6 @@ ol li {
   margin-left: 2rem;
 }
 
-/* Mobile-first default styles max-width: 480px */
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: white;
-}
-
-section {
-  padding: 5% 10% 0 10%;
-}
-
-section:last-of-type {
-  padding-bottom: 5%;
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -71,13 +72,33 @@ section:last-of-type {
   max-width: 1600px;
   width: 100%;
   margin: auto;
-  /* padding: 0 5%; */ /* Lägger till padding så att innehållet inte når kanterna */
+  flex: 1;
+}
+
+pre {
+  font-size: 10px;
+  display: flex;
+  align-items: center; /* Centrera vertikalt */
+  text-align: left; /* Se till att texten behåller sin formattering */
+  white-space: pre-wrap; /* Behåll radbrytningar */
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  max-width: 100%; /* Undvik att texten blir för bred */
 }
 
 /* Tablets */
 @media (min-width: 480px) and (max-width: 1025px) {
   body {
     background-color: lightgreen;
+    font-size: 19px;
+  }
+
+  section {
+    padding: 5% 20% 0 20%;
+  }
+
+  pre {
+    font-size: 11px;
   }
 }
 
@@ -85,6 +106,14 @@ section:last-of-type {
 @media (min-width: 1025px) and (max-width: 1440px) {
   body {
     background-color: lightcoral;
+    font-size: 19px;
+  }
+  section {
+    padding: 5% 25% 0 25%;
+  }
+
+  pre {
+    font-size: 14px;
   }
 }
 
@@ -92,9 +121,26 @@ section:last-of-type {
 @media (min-width: 1440px) and (max-width: 1600px) {
   body {
     background-color: lightgoldenrodyellow;
+    font-size: 18px;
+  }
+  section {
+    padding: 5% 30% 0 30%;
+  }
+
+  pre {
+    font-size: 18px;
   }
 }
 
 /* Max 1600px */
 @media (min-width: 1600px) {
+  body {
+    font-size: 18px;
+  }
+  section {
+    padding: 5% 30% 0 30%;
+  }
+  pre {
+    font-size: 20px;
+  }
 }
