--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -188,6 +188,7 @@ ul.dropdown-menu.active {
   background: none;
   border: none;
   cursor: pointer;
+  margin-right: 5%;
 }
 
 .hamburger-menu span {
