--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,7 +80,9 @@ a {
   color: var(--primary-color);
   text-decoration: none;
   font-weight: 500;
-  transition: color 0.3s ease, border-bottom 0.3s ease;
+  transition:
+    color 0.3s ease,
+    border-bottom 0.3s ease;
 }
 
 a:hover {
@@ -116,6 +118,13 @@ pre {
   background-color: #f5f5f5;
   border-radius: 8px;
   max-width: 100%; /* Undvik att texten blir för bred */
+}
+
+.responsive-img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 10px auto;
 }
 
 /* Tablets */
